# Small-Gaming-Server-Demo

./: CMakeLists.txt  README.md
Common/Cache/: CacheManager.cpp
Common/Managers/: ItemManager.cpp
Common/Network/: Epoll.cpp  baselink.cpp
Common/Systems/: BagSystem.cpp
MasterServer/: CMakeLists.txt
db_server/: CMakeLists.txt
db_server/inc/: CacheEnum.h  CacheManager.h  Epoll.h  EventSystem.h  MesgHead.h  MySqlManager.h  SocketServer.h  baselink.h  buffer.h
db_server/inc/proto/: GameSpec.pb.cc  GameSpec.proto  MSG_PLAYER_MOVE.pb.h  MSG_PLAYER_REGISTER.proto  MsgID.pb.cc  MsgID.pb.h  MsgServerID.pb.cc  MsgServerID.pb.h  MsgServerID.proto  Msg_To_And_From_DB.pb.h  Msg_To_And_From_DB.proto  build.sh
db_server/inc/proto/csharp/: MSGPLAYERMOVE.cs  MsgTest.cs
db_server/src/: EventSystem.cpp  main.cpp
db_server/src/manager/: CacheManager.cpp  MysqlManager.cpp
db_server/src/network/: MesgHead.cpp  SocketServer.cpp  baselink.cpp
game_server/: CMakeLists.txt
game_server/inc/: CacheManager.h  EntityMgr.h  EventSystem.h  ItemList.h  MySqlManager.h  SocketServer.h  TransformSystem.h
game_server/inc/Components/: PlayerInfoComponent.h
game_server/src/: EventSystem.cpp  main.cpp
game_server/src/network/: Epoll.cpp  (+3 more)
gate_server/: CMakeLists.txt
gate_server/inc/: Epoll.h  EventSystem.h  SocketServer.h  baselink.h
gate_server/src/: EventSystem.cpp  SocketServer.cpp  main.cpp
inc/: BagContainer.h  BagSystem.h  CacheManager.h  Config.h  CurrencyContainer.h  Entity.h  EntityMgr.h  ItemBase.h  ItemContainer.h  ItemsMgr.h  MsgHandler.h  Player.h  PlayerManager.h  bloom_filter.hpp  buffer.hpp
inc/Components/: TransformComponent.h
inc/Configs/: Config.h
inc/proto/: GameSpec.pb.cc  GameSpec.pb.h  GameSpec.proto  MsgID.pb.cc  MsgID.pb.h  MsgID.proto  MsgTest.pb.h  MsgTest.proto  Msg_To_And_From_DB.pb.cc  Msg_To_And_From_DB.pb.h  Msg_To_And_From_DB.proto  build.sh  buildc#.sh
login/: CMakeLists.txt
login/src/: EventSystem.cpp  main.cpp
login_server/: CMakeLists.txt
login_server/inc/: BaseComponent.h  ComponentsMgr.h  Config.h  Epoll.h  EventSystem.h  ItemsMgr.h  Player.h  ServerConnectionManager.h  Singleton.h  SocketServer.h  baselink.h
login_server/inc/Components/: ItemComponent.h
login_server/inc/proto/: MSG_PLAYER_MOVE.pb.cc  MSG_PLAYER_MOVE.proto  MSG_PLAYER_REGISTER.pb.cc  MSG_PLAYER_REGISTER.pb.h  MsgTest.pb.cc  build.sh
login_server/inc/proto/csharp/: MsgID.cs
login_server/src/: Epoll.cpp  EventSystem.cpp  MesgHead.cpp  SocketServer.cpp  baselink.cpp  buffer.cpp
login_server/src/Cache/: CacheManager.cpp
login_server/src/Managers/: EntityManager.cpp  Player.cpp  ServerConnectionManager.cpp
login_server/src/Network/: Epoll.cpp  MesgHead.cpp  SocketServer.cpp  buffer.cpp
login_server/src/Systems/: BagSystem.cpp
login_server/src/db/: MysqlManager.cpp
master_server/: CMakeLists.txt
master_server/Source/: UserManager.cpp
(+13 files in other folders)
